# voxel

./: Cargo.toml  LICENSE  README.md
crates/voxel_core/: Cargo.toml
crates/voxel_core/src/: lib.rs
crates/voxel_core/src/lowlevel/: align.rs  cache_padded.rs  checks.rs  mod.rs
crates/voxel_orient/: Cargo.toml  LICENSE  README.md
crates/voxel_orient/src/: axis.rs  canonical.rs  direction.rs  faces.rs  flip.rs  lib.rs  orient_table.rs  orientation.rs  orientation_enum.rs  parity.rs  polarity.rs  rotation.rs  simd.rs  types.rs
crates/voxel_orient/src/simd/: mod.rs  x86_64.rs
crates/voxel_orient/tests/: direction_tests.rs  flip_tests.rs  orientation_tests.rs  rotation_tests.rs
src/: lib.rs
tools/: README.md
tools/headers/: Cargo.toml  README.md  locations.json
tools/headers/files/headers/: main.txt
tools/headers/src/: cargo.rs  header_text.txt  lib.rs  main.rs
tools/headers/src/headspace/: mod.rs
tools/headers/src/headspace/env/: mod.rs
