[package]
name = "voxel"
description = "Voxel library for making voxel games."
readme = "README.md"
# workspace.package
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
# Prevent publish. This is a reminder to double-check everything.
publish = false

[workspace.package]
authors = ["github.com/ErisianArchitect"]
version = "0.1.0-indev"
edition = "2024"
license = "MIT"
homepage = "https://github.com/ErisianArchitect/voxel"
repository = "https://github.com/ErisianArchitect/voxel"

[features]
default = []
glam = [
    "dep:glam",
    "orient/glam",
    "vcore/glam",
]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
# Internal
vcore = { package = "voxel-core", path = "crates/voxel_core", version = "0.1.0-indev" }
orient = { package = "voxel-orient", path = "crates/voxel_orient", version = "0.2.0-indev" }

# External
paste = "1.0.15"
glam = "0.32.1"
lolevel = "0.3.0-indev"

[dependencies]
vcore.workspace = true
orient.workspace = true

paste.workspace = true
glam = { workspace = true, optional = true }
lolevel.workspace = true