[package]
name = "voxel-core"
description = "Core library for the voxel crate."
readme = "README.md"
version = "0.1.0-indev"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
glam = ["dep:glam"]

[dependencies]
paste.workspace = true
glam = { workspace = true, optional = true }