[package]
name = "voxel-orient"
version = "0.1.0"
edition = "2024"
authors = ["github.com/ErisianArchitect"]
description = "Voxel cube orientation library."
license = "MIT"
homepage = "https://github.com/ErisianArchitect/voxel"
repository = "https://github.com/ErisianArchitect/voxel"
readme = "README.md"

[features]
default = []
glam = ["dep:glam"]

[dependencies]
# Internal
vcore.workspace = true

# External
paste.workspace = true
glam = { workspace = true, optional = true }