[package]
name = "voxel-orient"
description = "Voxel cube orientation library."
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
glam = ["dep:glam"]

[dependencies]
# Internal
vcore.workspace = true

# External
paste.workspace = true
glam = { workspace = true, optional = true }