
[package]
name = "voxel-orient"
description = "Voxel cube orientation library."
readme = "README.md"
version = "0.2.0-indev"

edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
glam = ["dep:glam"]

[dependencies]
# Internal
# vcore.workspace = true

# External
paste.workspace = true
glam = { workspace = true, optional = true }
lolevel.workspace = true
isit.workspace = true
