
[package]
name = "headers"
authors.workspace = true
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true

# Non-workspace Dependencies
toml = "1.1.2+spec-1.1.0"
globset = "0.4.18"
textwrap = "0.16.2"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
